--- a/src/Yosai/CMakeLists.txt
+++ b/src/Yosai/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SRCROOT ${CMAKE_CURRENT_SOURCE_DIR})
 # Files
 set(FILES_HEADER
         ${INCROOT}/StateControl/State.hpp
+        ${INCROOT}/StateControl/MenuState.hpp
         ${INCROOT}/StateControl/StateControl.hpp
         ${INCROOT}/StateControl/StateIdentifiers.hpp
 
@@ -19,6 +20,7 @@ set(FILES_HEADER
 
 set(FILES_SRC
         ${SRCROOT}/StateControl/State.cpp
+        ${SRCROOT}/StateControl/MenuState.cpp
         ${SRCROOT}/StateControl/StateControl.cpp
 
         ${SRCROOT}/Util/Logger.cpp
