--- a/src/Yosai/CMakeLists.txt
+++ b/src/Yosai/CMakeLists.txt
@@ -3,12 +3,14 @@ set(SRCROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Files
 set(FILES_HEADER
-        ${INCROOT}/ActionControl/detail/ActionControl.inl
-        ${INCROOT}/ActionControl/detail/ActionMap.inl
+        #${INCROOT}/ActionControl/detail/ActionControl.inl
+        #${INCROOT}/ActionControl/detail/ActionMap.inl
 
-        ${INCROOT}/ActionControl/Action.hpp
-        ${INCROOT}/ActionControl/ActionControl.hpp
-        ${INCROOT}/ActionControl/ActionMap.hpp
+        #${INCROOT}/ActionControl/Action.hpp
+        #${INCROOT}/ActionControl/ActionControl.hpp
+        #${INCROOT}/ActionControl/ActionMap.hpp
+
+        ${INCROOT}/Conversion/Conversion.hpp
 
         ${INCROOT}/ID/ResourceIdentifiers.hpp
         ${INCROOT}/ID/StateIdentifiers.hpp
@@ -44,7 +46,9 @@ set(FILES_HEADER
    )
 
 set(FILES_SRC
-        ${SRCROOT}/ActionControl/Action.cpp
+        #${SRCROOT}/ActionControl/Action.cpp
+
+        ${SRCROOT}/Conversion/KeyConversion.cpp
 
         ${SRCROOT}/InputControl/AbstractDeviceController.cpp
         ${SRCROOT}/InputControl/InputControl.cpp
