--- a/src/Yosai/CMakeLists.txt
+++ b/src/Yosai/CMakeLists.txt
@@ -3,12 +3,12 @@ set(SRCROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Files
 set(FILES_HEADER
-        #${INCROOT}/ActionControl/detail/ActionControl.inl
-        #${INCROOT}/ActionControl/detail/ActionMap.inl
-
-        #${INCROOT}/ActionControl/Action.hpp
-        #${INCROOT}/ActionControl/ActionControl.hpp
-        #${INCROOT}/ActionControl/ActionMap.hpp
+        ${INCROOT}/ActionControl/detail/ActionControl.inl
+        ${INCROOT}/ActionControl/detail/ActionExpression.hpp
+        ${INCROOT}/ActionControl/detail/ActionMap.inl
+        ${INCROOT}/ActionControl/Action.hpp
+        ${INCROOT}/ActionControl/ActionControl.hpp
+        ${INCROOT}/ActionControl/ActionMap.hpp
 
         ${INCROOT}/Conversion/Conversion.hpp
 
@@ -17,7 +17,6 @@ set(FILES_HEADER
 
         ${INCROOT}/InputControl/AbstractDeviceController.hpp
         ${INCROOT}/InputControl/InputControl.hpp
-        ${INCROOT}/InputControl/EventBuffer.hpp
         ${INCROOT}/InputControl/KeyboardController.hpp
         ${INCROOT}/InputControl/MouseController.hpp
         ${INCROOT}/InputControl/WindowController.hpp
@@ -50,12 +49,12 @@ set(FILES_HEADER
    )
 
 set(FILES_SRC
-        #${SRCROOT}/ActionControl/Action.cpp
+        ${SRCROOT}/ActionControl/detail/ActionExpression.cpp
+        ${SRCROOT}/ActionControl/Action.cpp
 
         ${SRCROOT}/Conversion/KeyConversion.cpp
 
         ${SRCROOT}/InputControl/AbstractDeviceController.cpp
-        ${SRCROOT}/InputControl/EventBuffer.cpp
         ${SRCROOT}/InputControl/InputControl.cpp
         ${SRCROOT}/InputControl/KeyboardController.cpp
         ${SRCROOT}/InputControl/MouseController.cpp
