Action Control DONE

--- a/src/Yosai/CMakeLists.txt
+++ b/src/Yosai/CMakeLists.txt
@@ -5,11 +5,15 @@ set(LIBS ${LIBS} kigen)
 
 # Files
 set(FILES_HEADER
+        ${INCROOT}/id/ActionsIdentifiers.hpp
         ${INCROOT}/id/ResourceIdentifiers.hpp
         ${INCROOT}/id/StateIdentifiers.hpp
 
-        ${INCROOT}/states/AllStates.hpp
+        ${INCROOT}/models/ConfigurationData.hpp
+
+        ${INCROOT}/states/GameState.hpp
         ${INCROOT}/states/MenuState.hpp
+        ${INCROOT}/states/States.hpp
 
         ${INCROOT}/GlobalColours.hpp
         ${INCROOT}/Yosai.hpp
@@ -18,11 +22,12 @@ set(FILES_HEADER
 set(FILES_SRC
         ${SRCROOT}/models/ConfigurationData.cpp
 
+        ${SRCROOT}/states/GameState.cpp
         ${SRCROOT}/states/MenuState.cpp
 
         ${SRCROOT}/Yosai.cpp
         ${SRCROOT}/main.cpp
-   )
+    )
 
 add_executable(${EXECUTABLE_NAME} ${FILES_HEADER} ${FILES_SRC})
 target_link_libraries(${CMAKE_PROJECT_NAME} ${LIBS})
