--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ endif()
 include_directories(${PROJECT_ROOT_DIR}/include)
 
 # Add the subdirectories
+add_subdirectory(${PROJECT_ROOT_DIR}/deps)
 add_subdirectory(${PROJECT_ROOT_DIR}/src/${CMAKE_PROJECT_NAME})
 add_subdirectory(${PROJECT_ROOT_DIR}/src/Kigen) ####
 #----------------------------------------------------------------------------------------------------------------#
