World works with bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(CMAKE_BUILD_TYPE Debug)
 
 # Custom compiler flags
 set(WARNING "-Wall -Wextra -Wshadow -Wnon-virtual-dtor ") # -Werror -Weffc++ -pedantic
-set(FLAGS "-std=c++1y -O3 -s ")
+set(FLAGS "-std=c++1y -O0 -g") #-O3 -s
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WARNING} ${FLAGS}")
 
 #Set output dirs
